--- a/SpotifyCloneProject/Podfile
+++ b/SpotifyCloneProject/Podfile
@@ -1,11 +1,10 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '14.0'
 
 target 'SpotifyClone' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for SpotifyClone
+  pod 'Alamofire', '~> 5.4'
 
   target 'SpotifyCloneTests' do
     inherit! :search_paths
