Add splash screen with spotify logo

--- a/SpotifyCloneProject/SpotifyClone/Info.plist
+++ b/SpotifyCloneProject/SpotifyClone/Info.plist
@@ -30,7 +30,12 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchScreen</key>
-	<dict/>
+	<dict>
+		<key>UIImageName</key>
+		<string>spotify-small-colorful-logo</string>
+		<key>UIColorName</key>
+		<string>spotifyDarkerGray</string>
+	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
