[New Dependency] Add 'Introspect'

--- a/SpotifyCloneProject/Podfile
+++ b/SpotifyCloneProject/Podfile
@@ -5,6 +5,7 @@ target 'SpotifyClone' do
   use_frameworks!
 
   pod 'Alamofire', '~> 5.4'
+  pod 'Introspect'
 
   target 'SpotifyCloneTests' do
     inherit! :search_paths
